fix: Change a letter-spacing and a font. Fix out_of_bounds issue.

--- a/apps/canva_service_web/assets/css/app.scss
+++ b/apps/canva_service_web/assets/css/app.scss
@@ -90,6 +90,12 @@
 }
 
 .logo {
-    font-size: 4rem;
-    margin-bottom: 0;
+  font-size: 4rem;
+  margin-bottom: 0;
+}
+
+.canvas {
+  font-family: Courier New;
+  line-height: 1.6rem;
+  letter-spacing: 0.6rem;
 }
